# tomogotchi-cli

./: Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  pet.rs  ui.rs
