[package]
name = "tomogotchi-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sedona Agent Fleet <agents@kabletv.com>"]
description = "A CLI-based tamagotchi app built with Rust and Ratatui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
